# pyswigex

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
doxygen/: Doxyfile
src/: fibo.cpp  fibo.hpp  fibo.i
src/example_pkg/: __init__.py  fibo.py
test/: test_fibo.py
