[metadata]
name = example-pkg-fabien-ors
version = 0.0.1
author = Fabien Ors
author_email = fabien.ors@mines-paristech.fr
description = A small example package from official tutorial
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fabien-ors/example-pkg
project_urls =
    Bug Tracker = https://github.com/fabien-ors/example-pkg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

